--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -52,8 +52,8 @@ jobs:
           node-version: '18'
 
       - name: Build Frontend
+        working-directory: ./frontend
         run: |
-          cd frontend
           npm install
           npm run build
 
