--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -35,10 +35,10 @@ jobs:
           python-version: '3.11'
 
       - name: Install Backend Dependencies
-        working-directory: ./backend  # This is the "Magic Fix"
         run: |
           python -m pip install --upgrade pip
-          pip install -r requirements.txt
+          # We tell pip exactly where the file is starting from the root
+          pip install -r backend/requirements.txt
           pip install pymysql
 
       - name: Run Backend Lint/Tests
